# pacer

./: .gitignore  LICENSE  Novel Model Merging Method Development.md  README.md  pyproject.toml  requirements.txt  setup.py
configs/: llm_merge_4model.yaml  qwen_coder_merge.yaml  vit_merge.yaml
notebooks/: pacer_quickstart.ipynb
pacerkit/: __init__.py  cli.py  config.py  pacer.py
pacerkit/core/: __init__.py  alignment.py  consensus.py  interference.py  merging.py  moe.py
pacerkit/utils/: __init__.py  logging.py  model_io.py
pacerkit/vision/: __init__.py  token_merging.py
