[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pacerkit"
version = "0.1.0"
description = "PACER: Permutation-Aligned Consensus Expert Routing for Model Merging"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "PacerKit Contributors"}
]
keywords = [
    "machine-learning",
    "model-merging",
    "llm",
    "transformers",
    "mixture-of-experts",
    "moe"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "safetensors>=0.4.0",
    "accelerate>=0.25.0",
    "huggingface_hub>=0.19.0",
    "scipy>=1.10.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]
notebook = [
    "ipykernel>=6.25.0",
    "ipywidgets>=8.1.0",
    "jupyter>=1.0.0",
]

[project.scripts]
pacerkit = "pacerkit.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/pacerkit"
Documentation = "https://github.com/yourusername/pacerkit#readme"
Repository = "https://github.com/yourusername/pacerkit"

[tool.setuptools.packages.find]
where = ["."]
include = ["pacerkit*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100
